syntax = "proto3";

package github.com.Nixonxp.discord.auth.api.v1;

option go_package = "api/auth";

// AuthService - auth service
service AuthService {
  // Регистрация пользователя
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc Refresh(RefreshRequest) returns (RefreshResponse) {}
  rpc OauthLogin(OauthLoginRequest) returns (OauthLoginResponse) {}
  rpc OauthLoginCallback(OauthLoginCallbackRequest) returns (OauthLoginCallbackResponse) {}
}

message RegisterRequest {
  User body = 1;
}

message RegisterResponse {
  string userId = 1;
  string login = 2;
  string name = 3;
  string email = 4;
}

message LoginRequest {
  string login = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string refreshToken = 2;
}

message RefreshRequest {
  string refreshToken = 1;
}

message RefreshResponse {
  string token = 1;
  string state = 2;
}

message User {
  string login = 1;
  string name = 2;
  string email = 3;
  string password = 4;
}

message OauthLoginRequest {
}

message OauthLoginResponse {
  string code = 1;
}

message OauthLoginCallbackRequest {
  string code = 1;
  string state = 2;
}

message OauthLoginCallbackResponse {
  string token = 1;
  string refreshToken = 2;
}

message ErrorMessage {
  string message = 1;
}